--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Transforming Brain Aneurysm Diagnosis with AI Precision" />
   <meta property="og:description"
     content="Lilia AI's Brain Aneurysm solution leverages Convolutional Neural Networks and Large Language Models to analyze cranial CT angiograms and detect brain aneurysms with remarkable speed and accuracy." />
-  <meta property="og:image" content="https://www.lilia-ai.com/preview.jpg" />
+  <meta property="og:image" content="/preview.jpg" />
   <meta property="og:url" content="https://www.lilia-ai.com" />
   <meta property="og:type" content="website" />
 </head>
