--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
+  <link rel="icon" type="image/png" href="/lilia-ai-thumbnail.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lilia AI</title>
+
   <!-- Open Graph Meta Tags for Lilia AI -->
-  <meta property="og:title" content="Lilia AI - Brain Aneurysm Detection">
+  <meta property="og:title" content="Lilia AI - Brain Aneurysm Detection" />
   <meta property="og:description"
-    content="Lilia AI's Brain Aneurysm solution leverages Convolutional Neural Networks and Large Language Models to analyze cranial CT angiograms and detect brain aneurysms with remarkable speed and accuracy.">
-  <meta property="og:image" content="%PUBLIC_URL%/lilia-ai-thumbnail.png">
-  <meta property="og:url" content="https://www.lilia-ai.com/">
-  <meta property="og:type" content="website">
+    content="Lilia AI's Brain Aneurysm solution leverages Convolutional Neural Networks and Large Language Models to analyze cranial CT angiograms and detect brain aneurysms with remarkable speed and accuracy." />
+  <meta property="og:image" content="https://www.lilia-ai.com/lilia-ai-thumbnail.png" />
+  <meta property="og:url" content="https://www.lilia-ai.com/" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
